Newletter Dark Mode bugfix

--- a/themes/hyde-hyde/static/css/custom.css
+++ b/themes/hyde-hyde/static/css/custom.css
@@ -91,3 +91,9 @@ code {
 .lead a:hover {
     color: rgba(255,255,255,1)
 }
+
+#mc_embed_signup{
+    background:#fff; 
+    clear:left; 
+    font:14px Helvetica,Arial,sans-serif; 
+}
