--- a/themes/hyde-hyde/static/css/dark.css
+++ b/themes/hyde-hyde/static/css/dark.css
@@ -23,4 +23,16 @@ h1, h2, h3, h4, h5, h6 {
 .sidebar a {
 	color: #222;
   }
+
+  #mc_embed_signup{
+	background: #222;
+  }
+  input{
+	background: #222;
+	color: #ccc;
+  }
+  #mc_embed_signup #mc-embedded-subscribe-form div.mce_inline_error {
+	background-color: rgba(30, 30, 30, 0.85) !important;
+    -webkit-border-radius: 3px;
+  }
 }
